...

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

    <string name="msg_bem_vindo">Bem-vindo ao NutriCampus</string>
...
