<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tela_loginactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="50dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_weight="0.12"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_crz_crmv"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:onClick="entrarOnClick"
            android:padding="12dp"
            android:text="@string/entrar" />

        <TextView
            android:id="@+id/link_esqueceu_senha"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:onClick="recuperarSenhaOnClick"
            android:text="@string/link_esqueceu_senha"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlayout_faca_login"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_weight="0.44"
        android:gravity="center|bottom"
        android:onClick="cadastroOnClick"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:id="@+id/view2"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginBottom="52dp"
            android:background="#8f8f8f" />

        <TextView
            android:id="@+id/link_cadastro"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.67"
            android:text="@string/link_novo_cadastro"
            android:textAlignment="center"
            android:textSize="16sp" />
    </RelativeLayout>


</LinearLayout>